--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,10 +4,11 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the production Docker image...
-      - docker build -t cyberlkhome/react-jwt-auth .react-jwt-auth
-      - docker build -t cyberlkhome/node-js-jwt-auth .node-js-jwt-auth
-      - docker tag cyberlkhome/react-jwt-auth cyberlkhome/react-jwt-auth
-      - docker tag cyberlkhome/node-js-jwt-auth cyberlkhome/node-js-jwt-auth
+      - docker-compose up --build
+#       - docker build -t cyberlkhome/react-jwt-auth .react-jwt-auth
+#       - docker build -t cyberlkhome/node-js-jwt-auth .node-js-jwt-auth
+#       - docker tag cyberlkhome/react-jwt-auth cyberlkhome/react-jwt-auth
+#       - docker tag cyberlkhome/node-js-jwt-auth cyberlkhome/node-js-jwt-auth
       # Log in to the Docker CLI
       - echo "$DOCKER_PW" | docker login -u "$DOCKER_ID" --password-stdin
   post_build:
