--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the production Docker image...
-      - docker-compose up --build
+      - docker-compose build
 #       - docker build -t cyberlkhome/react-jwt-auth .react-jwt-auth
 #       - docker build -t cyberlkhome/node-js-jwt-auth .node-js-jwt-auth
 #       - docker tag cyberlkhome/react-jwt-auth cyberlkhome/react-jwt-auth
